Fixed invisible border error in grid

--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -68,7 +68,7 @@ header
   background #2495BF
   padding 20px
   margin-left 10px
-  bottom 210px
+  bottom 220px
 
   .grid a
     display inline-block
@@ -89,13 +89,13 @@ op
   top 100px
   left 15%
   margin-left 20px
-  bottom 210px
+  bottom 220px
   right 10px
   background #fff
 
 footer
   position absolute
-  height 190px
+  height 200px
   absolute left bottom right
   bottom 10px
 
@@ -112,7 +112,7 @@ footer
     background #18637F
     height 25%
     width 50%
-    line-height 95px
+    line-height 100px
     text-align center
     color #fff
 
@@ -122,7 +122,7 @@ footer
 
 #subfooter
   position absolute
-  height 190px
+  height 200px
   absolute left bottom right
   left 15%
   margin-left 20px
@@ -135,9 +135,9 @@ footer
   .grid a
     display inline-block
     background #2BB3E5
-    height 50%
+    height 100px
     width 25%
-    line-height 95px
+    line-height 100px
     text-align center
     color #fff
 
